@@ -68,6 +68,8 @@ tutorials is offered below.<br>
 </li>
 <li><a href=tut/DisplayModes.html>tut/DisplayModes</a> - Choosing and Configuring Display Modes
 </li>
+<li><a href=tut/chimp.py.html>tut/chimp.py</a> - 		  <BODY BGCOLOR=#FFFFFF>
+</li>
 
 <hr>
 
