@@ -1,5 +1,8 @@
 #This is a list of changes in pygame's history.
 
+Jan 6, 2001
+	added pygame.version module
+
 pygame-05
 Jan 6, 2001
 	Final cleanups for the new release
